k8s/infra/ollama/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: ollama
  namespace: cwx
spec:
  selector:
    app: ollama
  ports:
  - protocol: TCP
    port: 80
    targetPort: 11434
