k8s/infra/ollama/IngressRoute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ollama
  namespace: cwx
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`ollama.chenwx.top`)
      kind: Rule
      services:
        - name: ollama
          namespace: cwx
          port: 80
